Fix the post page metadata, and avatar on mobile.

--- a/static/css/main_new.less
+++ b/static/css/main_new.less
@@ -333,6 +333,9 @@ a.sub-comments {
       }
     }
     .metadata {
+      span, a {
+        display: inline-block;
+      }
       margin-top: 5px;
     }
     .title {
